Practica .Net finalizada, en la carpeta utilidades se encuentran los recursos solicitados.

--- a/AlMaximoTI_RESTful/Views/Producto/Crear.cshtml
+++ b/AlMaximoTI_RESTful/Views/Producto/Crear.cshtml
@@ -11,7 +11,6 @@
         <div class="alert alert-info" role="alert">
             Crear Producto
         </div>
-
         <div class="card">
             <div class="card-header">
                 AlMaximoTI : Crear Producto
@@ -34,20 +33,19 @@
                             <label for="tipo" class="form-label">Tipo</label>
                             <select class="form-control" id="tipo" name="tipo" required asp-items="ViewBag.TipoProductos">
                                 <option value="" disabled selected>Seleccione Tipo de Producto</option>
-                                <!-- Opciones -->
                             </select>
                         </div>
                         <div class="col-md-6">
                             <label for="txtPrecio" class="form-label">Precio</label>
                             <div class="input-group">
                                 <span class="input-group-text">$</span>
-                                <input type="number" class="form-control" id="txtPrecio" name="precio" placeholder="Ej: 100.00" required>
+                                <input type="number" min="1" class="form-control" id="txtPrecio" name="precio" placeholder="Ej: 100.00" required>
                             </div>
                         </div>
                     </div>
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="esActivo" name="esActivo" disabled>
-                        <label class="form-check-label" for="esActivo">Activo (Deshabilitado)</label>
+                        <label class="form-check-label" for="esActivo">(Deshabilitado) Activelo en la seccion Editar</label>
                     </div>
                     <div class="d-flex justify-content-between">
                         <button type="submit" class="btn btn-primary boton-guardar-cambios-producto">Guardar</button>
@@ -60,7 +58,5 @@
 </div>
 
 @section Scripts {
- 
-
-    <script src="~/js/crear.js"></script>
+    <script src="~/js/producto.js"></script>
 }
