--- a/AlMaximoTI_RESTful/Views/Producto/Privacy.cshtml
+++ b/AlMaximoTI_RESTful/Views/Producto/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "by: mickiDev";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Contratenme.... :D</p>
